# papryi

./: book_inventory_notes.md  papryi.db  pyproject.toml
papryi/: db.py  file_manager.py
